@@ -27,6 +27,10 @@ $ -> Language fix or change
 - -> Removed
 ! -> Note
 
+15-Apr-2010 Andrew Eddie
+ ^ Decoupled the core.admin check from JAccess and moved to JUser::authorise.
+ ^ Reinstated the lost root_user failsafe in the configuration file.
+
 14-Apr-2010 Chrisotphe Demko
 # Changed en_GB to en-GB in sample_data.sql
 
